--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8085
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=Maksim
+spring.datasource.password=1209alina
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.defer-datasource-initialization=true
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
